修正路径分隔符为正斜杠，确保在不同操作系统上的兼容性

--- a/test.ipynb
+++ b/test.ipynb
@@ -107,11 +107,171 @@
     "print(\"\\n最终展平后形状:\", arr_flattened.shape)\n",
     "print(\"最终展平后数组:\\n\", arr_flattened)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "3c0f7f09",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import scipy.io as sio\n",
+    "import jax\n",
+    "import jax.numpy as jnp\n",
+    "\n",
+    "a = sio.loadmat(\"data/PALA_InVivoRatBrain_001.2x2rdf.mat\")\n",
+    "b = sio.loadmat(\"data/1/PALA_InVivoRatBrain_001.mat\")\n",
+    "\n",
+    "a = a[\"IQ\"].real\n",
+    "b = b[\"IQ\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "e59ae5eb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[ 0.00000000e+00  +0.j      ,  0.00000000e+00  +0.j      ,\n",
+       "          0.00000000e+00  +0.j      , ...,  0.00000000e+00  +0.j      ,\n",
+       "          0.00000000e+00  +0.j      ,  0.00000000e+00  +0.j      ],\n",
+       "        [ 0.00000000e+00  +0.j      ,  0.00000000e+00  +0.j      ,\n",
+       "          0.00000000e+00  +0.j      , ...,  0.00000000e+00  +0.j      ,\n",
+       "          0.00000000e+00  +0.j      ,  0.00000000e+00  +0.j      ],\n",
+       "        [ 0.00000000e+00  +0.j      ,  0.00000000e+00  +0.j      ,\n",
+       "          0.00000000e+00  +0.j      , ...,  0.00000000e+00  +0.j      ,\n",
+       "          0.00000000e+00  +0.j      ,  0.00000000e+00  +0.j      ],\n",
+       "        ...,\n",
+       "        [ 0.00000000e+00  +0.j      ,  7.35443125e+04  +0.j      ,\n",
+       "          7.44467500e+04  +0.j      , ...,  6.50855000e+04  +0.j      ,\n",
+       "          6.76600000e+04  +0.j      ,  6.70172500e+04  +0.j      ],\n",
+       "        [ 0.00000000e+00  +0.j      ,  7.63344375e+04  +0.j      ,\n",
+       "          7.27590000e+04  +0.j      , ...,  6.75392500e+04  +0.j      ,\n",
+       "          6.57890000e+04  +0.j      ,  6.74907500e+04  +0.j      ],\n",
+       "        [ 0.00000000e+00  +0.j      ,  7.21553750e+04  +0.j      ,\n",
+       "          7.42936250e+04  +0.j      , ...,  6.61495000e+04  +0.j      ,\n",
+       "          6.76055000e+04  +0.j      ,  6.55052500e+04  +0.j      ]],\n",
+       "\n",
+       "       [[ 1.56250000e+00  +0.j      , -1.81180250e+05  +0.j      ,\n",
+       "         -1.76644516e+05  +0.j      , ..., -1.22197531e+05  +0.j      ,\n",
+       "         -1.09063812e+05  +0.j      , -1.07518953e+05  +0.j      ],\n",
+       "        [ 3.62500000e+00  +0.j      , -1.72386781e+05  +0.j      ,\n",
+       "         -1.88686375e+05  +0.j      , ..., -9.66568750e+04  +0.j      ,\n",
+       "         -1.20519688e+05  +0.j      , -1.04452734e+05  +0.j      ],\n",
+       "        [ 3.12500000e-01  +0.j      , -1.91054844e+05  +0.j      ,\n",
+       "         -1.67694297e+05  +0.j      , ..., -1.17537953e+05  +0.j      ,\n",
+       "         -9.95873750e+04  +0.j      , -1.22942969e+05  +0.j      ],\n",
+       "        ...,\n",
+       "        [ 4.37500000e-01  +0.j      , -5.41875938e+04  +0.j      ,\n",
+       "         -4.33272500e+04  +0.j      , ...,  4.04110625e+04  +0.j      ,\n",
+       "          2.57435156e+04  +0.j      ,  2.01191719e+04  +0.j      ],\n",
+       "        [ 1.87500000e+00  +0.j      , -9.87988750e+04  +0.j      ,\n",
+       "         -9.97073438e+04  +0.j      , ..., -2.55409219e+04  +0.j      ,\n",
+       "         -2.17773125e+04  +0.j      , -1.92846719e+04  +0.j      ],\n",
+       "        [ 1.75000000e+00  +0.j      , -9.74629375e+04  +0.j      ,\n",
+       "         -9.34582656e+04  +0.j      , ..., -9.20256250e+03  +0.j      ,\n",
+       "         -1.40165312e+04  +0.j      , -2.32162188e+04  +0.j      ]],\n",
+       "\n",
+       "       [[ 2.50000000e+00  +0.j      , -3.66545219e+05  +0.j      ,\n",
+       "         -3.51296875e+05  +0.j      , ..., -3.04242594e+05  +0.j      ,\n",
+       "         -2.88258594e+05  +0.j      , -2.97663562e+05  +0.j      ],\n",
+       "        [ 1.68750000e+00  +0.j      , -3.58474500e+05  +0.j      ,\n",
+       "         -3.66305125e+05  +0.j      , ..., -2.98022812e+05  +0.j      ,\n",
+       "         -3.00301000e+05  +0.j      , -2.92246531e+05  +0.j      ],\n",
+       "        [ 6.87500000e-01  +0.j      , -3.66314781e+05  +0.j      ,\n",
+       "         -3.63893594e+05  +0.j      , ..., -2.87863000e+05  +0.j      ,\n",
+       "         -3.07802656e+05  +0.j      , -3.00252031e+05  +0.j      ],\n",
+       "        ...,\n",
+       "        [ 4.18750000e+00  +0.j      , -4.64737750e+05  +0.j      ,\n",
+       "         -4.57212562e+05  +0.j      , ..., -3.98560312e+05  +0.j      ,\n",
+       "         -4.14476812e+05  +0.j      , -4.05527938e+05  +0.j      ],\n",
+       "        [ 3.37500000e+00  +0.j      , -4.66863594e+05  +0.j      ,\n",
+       "         -4.65742312e+05  +0.j      , ..., -4.06599188e+05  +0.j      ,\n",
+       "         -4.15484969e+05  +0.j      , -4.12581938e+05  +0.j      ],\n",
+       "        [ 1.25625000e+01  +0.j      , -4.52867750e+05  +0.j      ,\n",
+       "         -4.64257875e+05  +0.j      , ..., -4.06633875e+05  +0.j      ,\n",
+       "         -4.10731062e+05  +0.j      , -4.04193344e+05  +0.j      ]],\n",
+       "\n",
+       "       ...,\n",
+       "\n",
+       "       [[ 5.46875000e-02  +0.j      ,  4.79315625e+04  +0.j      ,\n",
+       "          4.71097031e+04  +0.j      , ...,  4.18472852e+04  +0.j      ,\n",
+       "          4.44143438e+04  +0.j      ,  4.29427188e+04  +0.j      ],\n",
+       "        [ 5.75492859e-01+220.55304j ,  4.93280273e+04  +0.j      ,\n",
+       "          4.87122500e+04  +0.j      , ...,  3.97891172e+04  +0.j      ,\n",
+       "          4.32815117e+04  +0.j      ,  4.38998477e+04  +0.j      ],\n",
+       "        [ 5.31539917e-02+308.53397j ,  4.80455664e+04  +0.j      ,\n",
+       "          4.87448047e+04  +0.j      , ...,  4.71195078e+04  +0.j      ,\n",
+       "          4.26170156e+04  +0.j      ,  4.31633125e+04  +0.j      ],\n",
+       "        ...,\n",
+       "        [-6.38214111e-01 +19.977718j,  1.23049492e+04  +0.j      ,\n",
+       "          1.46519160e+04  +0.j      , ...,  1.17768096e+04  +0.j      ,\n",
+       "          1.54830957e+04  +0.j      ,  1.25083730e+04  +0.j      ],\n",
+       "        [ 4.75585938e-01-250.54924j ,  1.22511523e+04  +0.j      ,\n",
+       "          1.03601035e+04  +0.j      , ...,  1.42526787e+04  +0.j      ,\n",
+       "          1.08194883e+04  +0.j      ,  1.29884551e+04  +0.j      ],\n",
+       "        [-4.37927246e-02-329.74512j ,  1.23908398e+04  +0.j      ,\n",
+       "          9.32102539e+03  +0.j      , ...,  1.19594346e+04  +0.j      ,\n",
+       "          8.78402051e+03  +0.j      ,  1.29135186e+04  +0.j      ]],\n",
+       "\n",
+       "       [[-1.87500000e-01  +0.j      ,  1.54660127e+04  +0.j      ,\n",
+       "          2.30484941e+04  +0.j      , ...,  1.62439746e+04  +0.j      ,\n",
+       "          2.11544961e+04  +0.j      ,  1.58429717e+04  +0.j      ],\n",
+       "        [-9.03320312e-02+207.27643j ,  2.05453047e+04  +0.j      ,\n",
+       "          2.02254492e+04  +0.j      , ...,  1.71019688e+04  +0.j      ,\n",
+       "          2.10117949e+04  +0.j      ,  1.79359395e+04  +0.j      ],\n",
+       "        [ 7.65197754e-01+279.82684j , -4.70840703e+04  +0.j      ,\n",
+       "         -5.31806641e+04  +0.j      , ..., -4.92559219e+04  +0.j      ,\n",
+       "         -5.18231445e+04  +0.j      , -4.68746680e+04  +0.j      ],\n",
+       "        ...,\n",
+       "        [-4.13681030e-01+317.2351j  , -5.06566055e+04  +0.j      ,\n",
+       "         -6.03963750e+04  +0.j      , ..., -5.73750312e+04  +0.j      ,\n",
+       "         -5.60696641e+04  +0.j      , -4.61271328e+04  +0.j      ],\n",
+       "        [ 1.32263184e-01+287.6394j  , -6.15085430e+04  +0.j      ,\n",
+       "         -5.65187812e+04  +0.j      , ..., -4.93480742e+04  +0.j      ,\n",
+       "         -5.42381172e+04  +0.j      , -5.27406953e+04  +0.j      ],\n",
+       "        [-6.39617920e-01+129.62802j , -6.39271289e+04  +0.j      ,\n",
+       "         -6.60708906e+04  +0.j      , ..., -5.75886562e+04  +0.j      ,\n",
+       "         -5.67689141e+04  +0.j      , -6.07571523e+04  +0.j      ]],\n",
+       "\n",
+       "       [[ 1.87500000e-01  +0.j      , -6.68395469e+04  +0.j      ,\n",
+       "         -6.58542500e+04  +0.j      , ..., -5.99709180e+04  +0.j      ,\n",
+       "         -6.02076250e+04  +0.j      , -5.89698203e+04  +0.j      ],\n",
+       "        [ 1.75781250e-01  +0.j      , -7.16508047e+04  +0.j      ,\n",
+       "         -7.01266719e+04  +0.j      , ..., -5.79559922e+04  +0.j      ,\n",
+       "         -5.97939453e+04  +0.j      , -6.01252031e+04  +0.j      ],\n",
+       "        [ 4.06250000e-01  +0.j      , -6.79495469e+04  +0.j      ,\n",
+       "         -7.08415000e+04  +0.j      , ..., -6.95272969e+04  +0.j      ,\n",
+       "         -6.13408633e+04  +0.j      , -6.27906992e+04  +0.j      ],\n",
+       "        ...,\n",
+       "        [ 2.20001221e-01 +89.12351j , -6.62792383e+03  +0.j      ,\n",
+       "         -8.69073242e+03  +0.j      , ..., -7.33785449e+03  +0.j      ,\n",
+       "         -8.25610352e+03  +0.j      , -6.30051562e+03  +0.j      ],\n",
+       "        [-5.46264648e-03+148.84802j , -8.79661133e+03  +0.j      ,\n",
+       "         -7.47349805e+03  +0.j      , ..., -5.88454297e+03  +0.j      ,\n",
+       "         -5.22373535e+03  +0.j      , -7.25747852e+03  +0.j      ],\n",
+       "        [ 2.83826590e-01+137.16075j , -8.55755664e+03  +0.j      ,\n",
+       "         -6.28794336e+03  +0.j      , ..., -8.73749316e+03  +0.j      ,\n",
+       "         -6.67409570e+03  +0.j      , -7.82277734e+03  +0.j      ]]],\n",
+       "      shape=(78, 118, 800), dtype=complex64)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a - b"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -125,7 +285,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.3"
+   "version": "3.12.11"
   }
  },
  "nbformat": 4,
